corretto il path del json per funzionare anche nel pacchetto jar